--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -651,6 +651,9 @@
     <ClCompile Include="..\engine\enginetrace.cpp">
       <Filter>sdk\engine</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\gl_rmain.cpp">
+      <Filter>sdk\engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1881,6 +1884,9 @@
       <Filter>sdk\public\materialsystem</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\enginetrace.h">
+      <Filter>sdk\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\gl_rmain.h">
       <Filter>sdk\engine</Filter>
     </ClInclude>
   </ItemGroup>
