Add 'gl_rmain.h/cpp' to the client dll project

--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="..\engine\cmodel_bsp.cpp" />
     <ClCompile Include="..\engine\common.cpp" />
     <ClCompile Include="..\engine\debugoverlay.cpp" />
+    <ClCompile Include="..\engine\gl_rmain.cpp" />
     <ClCompile Include="..\engine\gl_rsurf.cpp" />
     <ClCompile Include="..\engine\gl_screen.cpp" />
     <ClCompile Include="..\engine\host.cpp" />
@@ -183,6 +184,7 @@
     <ClInclude Include="..\engine\framesnapshot.h" />
     <ClInclude Include="..\engine\gl_matsysiface.h" />
     <ClInclude Include="..\engine\gl_model_private.h" />
+    <ClInclude Include="..\engine\gl_rmain.h" />
     <ClInclude Include="..\engine\gl_rsurf.h" />
     <ClInclude Include="..\engine\gl_screen.h" />
     <ClInclude Include="..\engine\host.h" />
