--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -609,6 +609,9 @@
     <ClCompile Include="..\engine\sys_mainwind.cpp">
       <Filter>sdk\engine</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\gl_rmain.cpp">
+      <Filter>sdk\engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1789,6 +1792,9 @@
     </ClInclude>
     <ClInclude Include="..\public\materialsystem\shader_vcs_version.h">
       <Filter>sdk\public\materialsystem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\gl_rmain.h">
+      <Filter>sdk\engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
