--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -216,6 +216,7 @@
     <ClInclude Include="..\engine\sys_getmodes.h" />
     <ClInclude Include="..\engine\sys_mainwind.h" />
     <ClInclude Include="..\engine\sys_utils.h" />
+    <ClInclude Include="..\engine\traceinit.h" />
     <ClInclude Include="..\filesystem\basefilesystem.h" />
     <ClInclude Include="..\filesystem\filesystem.h" />
     <ClInclude Include="..\gameui\IConsole.h" />
