--- a/r5dev/resource/cfg/englishserver_build_vpk.cfg
+++ b/r5dev/resource/cfg/englishserver_build_vpk.cfg
@@ -1,4 +1,4 @@
-fs_vpk_build "english" "server" "mp_common" "1"
+fs_vpk_build "english" "server" "mp_lobby" "1"
 fs_vpk_build "english" "server" "mp_rr_aqueduct" "1"
 fs_vpk_build "english" "server" "mp_rr_aqueduct_night" "1"
 fs_vpk_build "english" "server" "mp_rr_arena_composite" "1"
