--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -1799,6 +1799,9 @@
     <ClInclude Include="..\game\client\viewrender.h">
       <Filter>sdk\game\client</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\dt_common.h">
+      <Filter>sdk\public</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\shared\resource\lockedserver.png">
