--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -654,6 +654,9 @@
     <ClCompile Include="..\engine\gl_rmain.cpp">
       <Filter>sdk\engine</Filter>
     </ClCompile>
+    <ClCompile Include="..\public\datamap.cpp">
+      <Filter>sdk\public</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1896,6 +1899,9 @@
       <Filter>sdk\engine</Filter>
     </ClInclude>
     <ClInclude Include="..\public\dt_common.h">
+      <Filter>sdk\public</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\datamap.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
   </ItemGroup>
