--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1260,6 +1260,12 @@
     <ClInclude Include="..\public\datamap.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
+    <ClInclude Include="..\tier1\utlbuffer.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier1\byteswap.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1582,6 +1588,9 @@
     </ClCompile>
     <ClCompile Include="..\public\datamap.cpp">
       <Filter>sdk\public</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tier1\utlbuffer.cpp">
+      <Filter>sdk\tier1</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
