--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -232,6 +232,9 @@
     <Filter Include="sdk\public\materialsystem">
       <UniqueIdentifier>{565eefdf-15cf-47dc-a22b-0d3521e8c5c9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\milessdk\shared">
+      <UniqueIdentifier>{7823b9d7-9d02-4936-b326-4b6351df0c7e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\cdll_engine_int.cpp">
@@ -617,6 +620,9 @@
     </ClCompile>
     <ClCompile Include="..\tier1\utlbuffer.cpp">
       <Filter>sdk\tier1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\milessdk\shared\core.cpp">
+      <Filter>sdk\milessdk\shared</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1819,6 +1825,9 @@
     </ClInclude>
     <ClInclude Include="..\public\ipackedstore.h">
       <Filter>sdk\public</Filter>
+    </ClInclude>
+    <ClInclude Include="..\milessdk\shared\core.h">
+      <Filter>sdk\milessdk\shared</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
