--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -241,6 +241,9 @@
     <Filter Include="sdk\public\materialsystem">
       <UniqueIdentifier>{1718d302-db9b-4d2e-b666-cb9f2712eef4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\milessdk\shared">
+      <UniqueIdentifier>{14049eac-0367-4235-b555-c4815be3e905}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\vengineclient_impl.cpp">
@@ -659,6 +662,9 @@
     </ClCompile>
     <ClCompile Include="..\tier1\utlbuffer.cpp">
       <Filter>sdk\tier1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\milessdk\shared\core.cpp">
+      <Filter>sdk\milessdk\shared</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1915,6 +1921,9 @@
     </ClInclude>
     <ClInclude Include="..\public\ipackedstore.h">
       <Filter>sdk\public</Filter>
+    </ClInclude>
+    <ClInclude Include="..\milessdk\shared\core.h">
+      <Filter>sdk\milessdk\shared</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
