--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -235,6 +235,9 @@
     <Filter Include="sdk\milessdk\shared">
       <UniqueIdentifier>{7823b9d7-9d02-4936-b326-4b6351df0c7e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\codecs">
+      <UniqueIdentifier>{3b14367c-17f1-43d8-b8f5-a55506ac961f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\cdll_engine_int.cpp">
@@ -623,6 +626,9 @@
     </ClCompile>
     <ClCompile Include="..\milessdk\shared\core.cpp">
       <Filter>sdk\milessdk\shared</Filter>
+    </ClCompile>
+    <ClCompile Include="..\codecs\bink_impl.cpp">
+      <Filter>sdk\codecs</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1828,6 +1834,9 @@
     </ClInclude>
     <ClInclude Include="..\milessdk\shared\core.h">
       <Filter>sdk\milessdk\shared</Filter>
+    </ClInclude>
+    <ClInclude Include="..\codecs\bink_impl.h">
+      <Filter>sdk\codecs</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
