Move Miles and Bink hooks/implementations to shared 'codecs' folder

--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -109,9 +109,6 @@
     <Filter Include="sdk\materialsystem">
       <UniqueIdentifier>{55bb4f60-5f5a-4780-a7a2-b3db51c53680}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sdk\milessdk">
-      <UniqueIdentifier>{f52dfb17-f5bd-4258-91a2-500587bee708}</UniqueIdentifier>
-    </Filter>
     <Filter Include="sdk\tier1">
       <UniqueIdentifier>{c5adc45b-d14c-4d52-9835-29948cab931a}</UniqueIdentifier>
     </Filter>
@@ -232,11 +229,14 @@
     <Filter Include="sdk\public\materialsystem">
       <UniqueIdentifier>{565eefdf-15cf-47dc-a22b-0d3521e8c5c9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sdk\milessdk\shared">
-      <UniqueIdentifier>{7823b9d7-9d02-4936-b326-4b6351df0c7e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="sdk\codecs">
       <UniqueIdentifier>{3b14367c-17f1-43d8-b8f5-a55506ac961f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\codecs\bink">
+      <UniqueIdentifier>{20572d96-e629-45f1-8ae2-224a776bfb19}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\codecs\miles">
+      <UniqueIdentifier>{5529291a-e3b6-44a7-8edf-f0fe4e0ac4dc}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -624,11 +624,11 @@
     <ClCompile Include="..\tier1\utlbuffer.cpp">
       <Filter>sdk\tier1</Filter>
     </ClCompile>
-    <ClCompile Include="..\milessdk\shared\core.cpp">
-      <Filter>sdk\milessdk\shared</Filter>
+    <ClCompile Include="..\codecs\bink\bink_impl.cpp">
+      <Filter>sdk\codecs\bink</Filter>
     </ClCompile>
-    <ClCompile Include="..\codecs\bink_impl.cpp">
-      <Filter>sdk\codecs</Filter>
+    <ClCompile Include="..\codecs\Miles\miles_impl.cpp">
+      <Filter>sdk\codecs\miles</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1111,9 +1111,6 @@
     </ClInclude>
     <ClInclude Include="..\engine\debugoverlay.h">
       <Filter>sdk\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="..\milessdk\win64_rrthreads.h">
-      <Filter>sdk\milessdk</Filter>
     </ClInclude>
     <ClInclude Include="..\mathlib\fbits.h">
       <Filter>sdk\mathlib</Filter>
@@ -1832,11 +1829,14 @@
     <ClInclude Include="..\public\ipackedstore.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\milessdk\shared\core.h">
-      <Filter>sdk\milessdk\shared</Filter>
+    <ClInclude Include="..\codecs\bink\bink_impl.h">
+      <Filter>sdk\codecs\bink</Filter>
     </ClInclude>
-    <ClInclude Include="..\codecs\bink_impl.h">
-      <Filter>sdk\codecs</Filter>
+    <ClInclude Include="..\codecs\Miles\miles_impl.h">
+      <Filter>sdk\codecs\miles</Filter>
+    </ClInclude>
+    <ClInclude Include="..\codecs\Miles\radshal_wasapi.h">
+      <Filter>sdk\codecs\miles</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
