--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -15,7 +15,8 @@
     <ClCompile Include="..\bsplib\bsplib.cpp" />
     <ClCompile Include="..\client\cdll_engine_int.cpp" />
     <ClCompile Include="..\client\vengineclient_impl.cpp" />
-    <ClCompile Include="..\codecs\bink_impl.cpp" />
+    <ClCompile Include="..\codecs\bink\bink_impl.cpp" />
+    <ClCompile Include="..\codecs\Miles\miles_impl.cpp" />
     <ClCompile Include="..\common\netmessages.cpp" />
     <ClCompile Include="..\common\opcodes.cpp" />
     <ClCompile Include="..\core\dllmain.cpp" />
@@ -82,7 +83,6 @@
     <ClCompile Include="..\mathlib\ssenoise.cpp" />
     <ClCompile Include="..\mathlib\transform.cpp" />
     <ClCompile Include="..\mathlib\vmatrix.cpp" />
-    <ClCompile Include="..\milessdk\shared\core.cpp" />
     <ClCompile Include="..\networksystem\listmanager.cpp" />
     <ClCompile Include="..\networksystem\pylon.cpp" />
     <ClCompile Include="..\pluginsystem\pluginsystem.cpp" />
@@ -157,7 +157,9 @@
     <ClInclude Include="..\bsplib\bsplib.h" />
     <ClInclude Include="..\client\cdll_engine_int.h" />
     <ClInclude Include="..\client\vengineclient_impl.h" />
-    <ClInclude Include="..\codecs\bink_impl.h" />
+    <ClInclude Include="..\codecs\bink\bink_impl.h" />
+    <ClInclude Include="..\codecs\Miles\miles_impl.h" />
+    <ClInclude Include="..\codecs\Miles\radshal_wasapi.h" />
     <ClInclude Include="..\common\igameserverdata.h" />
     <ClInclude Include="..\common\netmessages.h" />
     <ClInclude Include="..\common\opcodes.h" />
@@ -246,8 +248,6 @@
     <ClInclude Include="..\mathlib\vector4d.h" />
     <ClInclude Include="..\mathlib\vmatrix.h" />
     <ClInclude Include="..\mathlib\vplane.h" />
-    <ClInclude Include="..\milessdk\shared\core.h" />
-    <ClInclude Include="..\milessdk\win64_rrthreads.h" />
     <ClInclude Include="..\networksystem\listmanager.h" />
     <ClInclude Include="..\networksystem\pylon.h" />
     <ClInclude Include="..\networksystem\serverlisting.h" />
