--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -672,6 +672,12 @@
     <ClCompile Include="..\codecs\Miles\miles_impl.cpp">
       <Filter>sdk\codecs\miles</Filter>
     </ClCompile>
+    <ClCompile Include="..\protoc\sig_map.pb.cc">
+      <Filter>thirdparty\protobuf</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\sigcache.cpp">
+      <Filter>sdk\public\utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1937,6 +1943,12 @@
     <ClInclude Include="..\codecs\Miles\miles_types.h">
       <Filter>sdk\codecs\miles</Filter>
     </ClInclude>
+    <ClInclude Include="..\protoc\sig_map.pb.h">
+      <Filter>thirdparty\protobuf</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\sigcache.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\shared\resource\lockedserver.png">
@@ -1950,5 +1962,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\GameSDK.def" />
+    <None Include="..\protoc\sig_map.pb.cc.vsspell" />
   </ItemGroup>
 </Project>
