--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -630,6 +630,12 @@
     <ClCompile Include="..\codecs\Miles\miles_impl.cpp">
       <Filter>sdk\codecs\miles</Filter>
     </ClCompile>
+    <ClCompile Include="..\protoc\sig_map.pb.cc">
+      <Filter>thirdparty\protobuf</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\sigcache.cpp">
+      <Filter>sdk\public\utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1837,6 +1843,12 @@
     </ClInclude>
     <ClInclude Include="..\codecs\Miles\radshal_wasapi.h">
       <Filter>sdk\codecs\miles</Filter>
+    </ClInclude>
+    <ClInclude Include="..\protoc\sig_map.pb.h">
+      <Filter>thirdparty\protobuf</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\sigcache.h">
+      <Filter>sdk\public\utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
