--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1269,6 +1269,12 @@
     <ClInclude Include="..\public\ipackedstore.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
+    <ClInclude Include="..\protoc\sig_map.pb.h">
+      <Filter>thirdparty\protobuf</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\sigcache.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1594,6 +1600,12 @@
     </ClCompile>
     <ClCompile Include="..\tier1\utlbuffer.cpp">
       <Filter>sdk\tier1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\protoc\sig_map.pb.cc">
+      <Filter>thirdparty\protobuf</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\sigcache.cpp">
+      <Filter>sdk\public\utility</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
