--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -630,6 +630,12 @@
     <ClCompile Include="..\codecs\Miles\miles_impl.cpp">
       <Filter>sdk\codecs\miles</Filter>
     </ClCompile>
+    <ClCompile Include="..\public\networkvar.cpp">
+      <Filter>sdk\public</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\dt_recv.cpp">
+      <Filter>sdk\public</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1837,6 +1843,12 @@
     </ClInclude>
     <ClInclude Include="..\codecs\Miles\radshal_wasapi.h">
       <Filter>sdk\codecs\miles</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\networkvar.h">
+      <Filter>sdk\public</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\dt_recv.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
