--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -672,6 +672,12 @@
     <ClCompile Include="..\codecs\Miles\miles_impl.cpp">
       <Filter>sdk\codecs\miles</Filter>
     </ClCompile>
+    <ClCompile Include="..\public\dt_recv.cpp">
+      <Filter>sdk\public</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\networkvar.cpp">
+      <Filter>sdk\public</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1936,6 +1942,15 @@
     </ClInclude>
     <ClInclude Include="..\codecs\Miles\miles_types.h">
       <Filter>sdk\codecs\miles</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\dt_recv.h">
+      <Filter>sdk\public</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\networkvar.h">
+      <Filter>sdk\public</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\dt_send.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
